<resources>
    <string name="app_name">SocialMedia App</string>

    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_story">Create a Story</string>
    <string name="emma">emma</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="profile_description">Emma Charlotte Duerre Watson is an English actress and activist. She has gained recognition for her roles in both blockbusters and independent films,</string>
    <string name="follow">Follow</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>

    <string name="api_key">AIzaSyCzYPrkY76kdrfIPYkm2KPtoyK-CFQl-FM</string>
</resources>